fix z-index for avatars

--- a/src/app/people/people.component.scss
+++ b/src/app/people/people.component.scss
@@ -1,7 +1,7 @@
 :host {
   position: relative;
   top: 20px;
-  height: 700px;
+  height: 500px;
   width: 420px;
   margin: 0 auto;
   display: flex;
@@ -14,7 +14,9 @@
 }
 
 .avatars {
+  margin-top: 250px;
   display: flex;
+  z-index: 2;
 }
 
 .avatar {
